--- a/meeting4.kv
+++ b/meeting4.kv
@@ -64,8 +64,7 @@ MyRoot:
 <Button_Layout>:
 
     size_hint_x:1
-    size_hint_y:None
-    height:50
+    size_hint_y:.07
     
     REC_Button:
         text : '録音開始'
